# plan-targeting-assessment

./: .eslintrc.js  .gitignore  .prettierrc  CLAUDE.md  README.md  cline_mcp_settings.json  cookies.txt  docker-compose.yml  test_integration.sh
backend/: .dockerignore  Cargo.toml  Dockerfile  apply_migrations.sh  build_output.txt  check_output.txt  cookies.txt  database.db  seed_meetings.sql  test_results.txt  test_results_final.txt  test_results_final_v2.txt  test_results_final_v3.txt  test_results_final_v4.txt  uuid-cookies.txt
backend/.sqlx/: query-0873750f05b46c6f43e28f1610a71292ba60481596186a2cb0cd800236937d33.json  query-09517f14d2377db0c17a8d69183eb6014e32194d02e09e4985c7d855925a73bb.json  query-0a98678609e0e6a7ebcfa4305c4b1a66d6baca916ad259cab58780e303ed9a54.json  query-0b0830cdd21c25d5e61bb4a0b496b5135c5970121098b32f66673cb0fcc0a11c.json  query-107b0c5df216466806197a481c83c6ed1258b3bf5161d2063f3e3eedf3368ae7.json  query-2e6ef37c720a6922226c027a7682baeb6aa1b2fbe0fafaa4d6017ad72ea2d6e2.json  query-2ef2b6e021f25f42e4fff0882365d9b2c1dd348bc41e62bccd4539ddc0879f6d.json  query-2fb0d5bd16b29de49afc53ed79634a5e1cf1c4b63b0ffee3d009b51f9125b2f2.json  query-3567dc557fe7327464e94f6b398ddfa0999225916adccc3b4570954ce12fb844.json  query-3abd9fc6972a5e59472d80fcc8d03efebb1b56ad0e62dc582ef461a87485d0e0.json  query-482865fd61b088f1c34adb0fc943e18e5869fbd742f5bdf0d3762a96cecd77db.json  query-4d5aab0383fc2885a47cad3283cdc04f482844f6a32bb85adf48bcb820e55359.json  query-550995c2bf5b6be5bb1cbb059f019f50c4bd132846679595ef9766f4611d3cf4.json  query-5a7c32beb5a34297766deb378c377c1fac744d2647a3d45817673ecc8714b08f.json  query-659a29d0550eb629a4e4eaff302c3fc3fef94b98cd10a6284d4fdd475903af35.json  query-6c75959905044888d74feec1d06b4cf412483c6c4a851b2099592b7452309ddb.json  query-6e26107774de8af7988c87dec496a76738ca98b3d5d331e727203cb619abc837.json  query-70a854c644b0e13cd6831829be4a7803cdcf48621bd8b27e460ec89d2eea237a.json  query-85eb308acef02982e320cf4936eba7418fa0c8e9b59555998bd462767da4bb25.json  query-8abd8e35ff84cd8bc0dd0b24bc4f5cb521ef9fdbd8581c517d7e61f01f4bc205.json  query-970e6f3d5e78bd84b14b80b9981900eef53ac53a1e89b57f29d2878fd4717025.json  query-9bb08fc6d555e117e36f624742fc419107074e7fb4fba3e4a78111d5ff243684.json  query-a40fd124e6f3cc435733cde1744965daee86fa6c3736bdf512da29cc333ab54f.json  query-d3b2a32d45b0d16c76cb9ca15097663a3673dcd7f5bd2ddd322187efad87419b.json  query-d8cdeaab4e5936522d7f1b0ee12f212e43f1ba9c3d26b5f82ea3ff90cf959da9.json  query-dbe68829778300e78cf5ac27b71c8098bebd89e30364df190e194e184354de80.json  query-e3ccc9897a30290c4c1d8178989cce296cd2eebb8480f31005b8fd92d19b3d77.json  query-e61575321ec634c1073fa573b653c5f2cef429c5b21585a3312629df0611ff8a.json  query-f832e8435ecc7b470e3b02aac0f3dca76ae88753c4e9bed00af38b1b50794aa8.json  query-f8c7f86ca46a3fd95ec1fa518be94d6582247c58f6f367882e56bf0583a82fc7.json
backend/config/: default.toml
backend/data/: app.db
backend/keys/: private_key.pem  public_key.pem
backend/migrations/: 20230101000000_init_users.sql  20230101000001_init_refresh_tokens.sql  20260102120000_add_notifications_and_user_prefs.sql  20260102170000_update_user_id_to_uuid.sql  20260103180000_abac_core_tables.sql  20260105120000_add_rate_limiting.sql  20260110150000_init_mshnctrl_core.sql  20260121120000_create_assumptions.sql  20260121130000_add_targeting_cell_role.sql  20260121140000_add_classification_support.sql  20260121160000_add_nato_copd_tables.sql  20260121170000_add_jtb_tables.sql  20260121171000_create_bda_workbench.sql  20260121180000_add_f3ead_stage_to_targets.sql  20260121181000_create_mission_command_tables.sql  20260121182000_create_munitions_table.sql  20260122140000_add_roe_support.sql  20260122150000_add_bda_report_history.sql  20260122160000_add_bda_component_assessment.sql  20260122170000_add_bda_peer_review.sql  20260122180000_add_bda_report_distribution.sql  20260123083000_unify_data_ontology.sql  20260123090000_unified_views.sql  20260123160000_expand_target_ontology.sql  20260124120000_add_im_role.sql  20260124134000_setup_im_role_correctly.sql  20260124134500_add_test_im_user.sql  20260124170000_add_dashboard_permissions.sql  20260124171800_im_ontology_schema.sql  20260126000000_create_targets_view.sql  20260131184000_add_target_id_to_strikes.sql  20260131190000_create_intelligence_feeds.sql  20260131200000_extend_decision_ontology.sql  20260202120000_align_admin_ontology.sql  20260202130000_remove_legacy_admin_tables.sql  20260202140000_align_assumptions_ontology.sql  20260202150000_align_decisions_ontology.sql  20260202160000_fix_abac_schema.sql  20260202170000_consolidate_ontology_types.sql  20260202171000_update_views_ontology.sql
backend/scripts/: clean_im_roles.rs  create_targeting_test_user.sql  create_test_user.rs  reset_im_password.rs  reset_user_password.rs  seed_im_ontology.sql  setup_assistant_im.rs  setup_verification_users.rs
backend/src/: lib.rs  main.rs
backend/src/config/: mod.rs
backend/src/features/: mod.rs
backend/src/features/abac/: models.rs  routes.rs  service.rs
backend/src/features/assumptions/: mod.rs  router.rs
backend/src/features/auth/: cookies.rs  jwt.rs  mod.rs  models.rs  routes.rs  service.rs
backend/src/features/bda/: mod.rs  router.rs
backend/src/features/dashboard/: mod.rs  routes.rs
backend/src/features/discovery/: mod.rs  models.rs  routes.rs  service.rs
backend/src/features/intelligence/: mod.rs  router.rs
backend/src/features/navigation/: mod.rs
backend/src/features/ontology/: mod.rs  models.rs  routes.rs  service.rs  tests.rs
backend/src/features/operations/: mod.rs  router.rs
backend/src/features/rate_limit/: middleware.rs  routes.rs  service.rs
backend/src/middleware/: abac.rs  auth.rs  classification.rs  csrf.rs  mod.rs
backend/src/utils/: email.rs  jwt_keys.rs  key_rotation.rs  mod.rs
backend/tests/: jtb_dtl_ontology_test.rs  roe_api_tests.rs  targeting_handlers_test.rs  targeting_repositories_test.rs  targeting_services_test.rs  targeting_target_crud_test.rs  targeting_target_handlers_test.rs
docs/: BACKLOG.md  (+121 more)
modules/admn-ctrl/: Cargo.toml
(+833 files in other folders)
