[package]
name = "template-repo-backend"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }
jsonwebtoken = "9.2"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
hyper = "1.0"
rand = "0.8"
rsa = "0.9"
pem = "3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.13"
toml = "0.5"
tower-cookies = "0.10"
argon2 = "0.5.3"
tower_governor = "0.4.2"
governor = "0.6.3"
sysinfo = "0.37.2"
printpdf = "0.8"

[dev-dependencies]
reqwest = "0.11"
tokio-test = "0.4"

[[bin]]
name = "create_test_user"
path = "scripts/create_test_user.rs"

[[bin]]
name = "reset_user_password"
path = "scripts/reset_user_password.rs"
