[package]
name = "bcknd-mssn-ctrl"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }
jsonwebtoken = "9.2"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
hyper = "1.0"
rand = "0.8"
rsa = "0.9"
pem = "3.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.13"
toml = "0.5"
tower-cookies = "0.10"
argon2 = "0.5.3"
tower_governor = "0.4.2"
governor = "0.6.3"
sysinfo = "0.37.2"
printpdf = "0.8"
async-recursion = "1.0"
c2-server = { path = "../modules/c2-ctrl/crates/c2-server" }
admn-server = { path = "../modules/admn-ctrl/crates/admn-server" }
core-auth = { path = "../modules/bcknd-ctrl/crates/core-auth" }
core-users = { path = "../modules/bcknd-ctrl/crates/core-users" }
core-abac = { path = "../modules/bcknd-ctrl/crates/core-abac" }
core-ontology = { path = "../modules/bcknd-ctrl/crates/core-ontology" }
core-system = { path = "../modules/bcknd-ctrl/crates/core-system" }
core-discovery = { path = "../modules/bcknd-ctrl/crates/core-discovery" }
core-rate-limit = { path = "../modules/bcknd-ctrl/crates/core-rate-limit" }
core-common-types = { path = "../modules/bcknd-ctrl/crates/core-common-types" }

[dev-dependencies]
reqwest = "0.11"
tokio-test = "0.4"

