[package]
name = "admn-users"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx.workspace = true
chrono.workspace = true
argon2.workspace = true
validator.workspace = true

# Dependencies from other repositories (using absolute or relative paths)
core-auth = { path = "../../../bcknd-ctrl/crates/core-auth" }
core-users = { path = "../../../bcknd-ctrl/crates/core-users" }
core-common-types = { path = "../../../bcknd-ctrl/crates/core-common-types" }
admn-abac = { path = "../admn-abac" }
